--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -9,7 +9,7 @@
 
 .home-page-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -58,3 +58,53 @@
     cursor: pointer;
 
 }
+
+.check-in-out-container {
+    text-align: center;
+    margin: 20px;
+    font-family: Arial, sans-serif;
+    width: 100%;
+  }
+  
+  /* Table styling */
+  .check-in-out-table {
+    margin: 0 auto;
+    border-collapse: collapse;
+    width: 50%;
+    background: rgba(255, 255, 255, 0.17);
+    width: 100%;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.2px);
+    -webkit-backdrop-filter: blur(6.2px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  
+  .check-in-out-table th,
+  .check-in-out-table td {
+    padding: 12px;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.17);
+    
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.2px);
+    -webkit-backdrop-filter: blur(6.2px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  
+  .check-in-out-table th {
+    background: rgba(100, 96, 96, 0.17);
+  
+   
+  }
+  
+  .check-in-out-table tr:nth-child(even) {
+    background: rgba(100, 96, 96, 0.17);
+
+   
+  }
+  
+  .check-in-out-table tr {
+    background: rgba(100, 96, 96, 0.17);
+  
+   
+  }
