check in changes

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -18,7 +18,7 @@
 .hours-checkin-checkout {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
